--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,9 @@
 @import url('vendor/normalize.css');
 
+@import url('blocks/header/header.css');
+@import url('blocks/logo/logo.css');
+@import url('blocks/menu/menu.css');
+
 body {
-  background-color: #000;
+  background-color: #fff;
 }
