--- a/src/styles/blocks/menu/menu.css
+++ b/src/styles/blocks/menu/menu.css
@@ -1,7 +1,7 @@
 .menu {
     background-color: #DF1919;
     /*height: 100vh;*/
-    width: 136px;
+    width: 6rem;
     position: fixed;
     right: 0;
     top: 0;
